--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "trivia-game_7579481b"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - CatagoryTest",
             "request": "launch",
             "mainClass": "CatagoryTest",
